Distributed_and_Parallel_Computing/Lab/Lab01/cuda/.metadata/.plugins/org.eclipse.cdt.ui/C1-imflip.build.log
11:20:40 **** Build of configuration Debug for project C1-imflip ****
make all 
Building file: ../src/ImageStuff.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ImageStuff.d" -MT"src/ImageStuff.d" -o "src/ImageStuff.o" "../src/ImageStuff.c"
../src/ImageStuff.c: In function ‘ReadBMP’:
../src/ImageStuff.c:37:16: warning: unused variable ‘tmp’ [-Wunused-variable]
  unsigned char tmp;
                ^
Finished building: ../src/ImageStuff.c
 
Building file: ../src/imflip.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/imflip.d" -MT"src/imflip.d" -o "src/imflip.o" "../src/imflip.c"
../src/imflip.c: In function ‘main’:
../src/imflip.c:100:2: error: ‘for’ loop initial declarations are only allowed in C99 mode
  for(int i = 0; i < ip.Vpixels; i++) { free(data[i]); }
  ^
../src/imflip.c:100:2: note: use option -std=c99 or -std=gnu99 to compile your code
make: *** [src/imflip.o] Error 1

11:20:40 Build Finished (took 210ms)

